--- a/deliverables/index.html
+++ b/deliverables/index.html
@@ -34,8 +34,41 @@
 	    <p><a href="./ProjectPlan-2012-02-28.pdf">Project Plan</a> - 28/2/2012 (updated to include graphs from paper submission)</p>
 	    <p><a href="./RequirementsSpec.pdf">Requirements Specification</a>, <a href="AcceptanceCriteria.pdf">Acceptance Criteria</a> &amp; <a href="./HighLevelDesign.pdf">High Level Design Specification</a> - 12/3/2012</p>
 	    <p><a href="./DetaildDesignSpecification.pdf">Detailed Design Specification</a> - 1/5/2012</p>
-	    <p>Source Code, Test Specification, User Documentation and Peer Assessment - 11/6/2012</p>
-	    <p>Presentation - 13/6/2012</p>
+	    <p><a href="http://github.com/teamgood/AntGame">Source Code</a>, <a href="./TestSpecification.pdf">Test Specification</a>, <a href="http://teamgood.github.com/antgame/tutorial.html">User Documentation</a> and <a href="#peer">Peer Assessment</a> - 11/6/2012</p>
+	    <p>Presentation - 12/6/2012</p>
+	    <a name="peer"></a>
+	    <h2>
+	    	Peer Assessment
+	    </h2>
+	    <table>
+	    	<tr>
+	    		<td><strong>Member</strong></th><td><strong>Score</strong></th>
+	    	</tr>
+	    	<tr>
+	    		<td>Simon Turner</td><td>0</td>
+	    	</tr>
+	    	<tr>
+	    		<td>Wojciech Tolsdorf</td><td>16</td>
+	    	</tr>
+	    	<tr>
+	    		<td>Devendra Magar</td><td>13</td>
+	    	</tr>
+	    	<tr>
+	    		<td>David Sheldrick</td><td>29</td>
+	    	</tr>
+	    	<tr>
+	    		<td>Victor Navarro</td><td>18</td>
+	    	</tr>
+	    	<tr>
+	    		<td>Wai Kin Leong</td><td>9</td>
+	    	</tr>
+	    	<tr>
+	    		<td>Joshua Pettitt</td><td>3</td>
+	    	</tr>
+	    	<tr>
+	    		<td>Rob Leggatt</td><td>12</td>
+	    	</tr>
+	    </table>
 
 		</div>
 	</div>
